# scratchpad

./: LICENSE
cgo/callback-performance/: .gitignore  CMakeLists.txt  README.md
cgo/callback-performance/cgo/: callbacks.go  perf.go  perf_test.go
cgo/callback-performance/go/: perf_test.go
cgo/callback-performance/lib/: .gitignore  CMakeLists.txt  callback.c  callback.h  perf.c
cgo/packed-structs/: CMakeLists.txt  README.md
cgo/packed-structs/C/: CMakeLists.txt  packing.c  structs.h
cgo/packed-structs/cgo/: packing.go
